# Hunters-Blue-Scripts

./: .gitignore  README.md
active_defense/: Cargo.toml
active_defense/src/: event_manager.rs  main.rs
powershell/: registry_compare.ps1  sys_recon.ps1
rust/registry_checker/: Cargo.toml
rust/registry_checker/src/: main.rs
rust/system_recon/src/: main.rs
system_recon/: Cargo.toml
system_recon/src/: main.rs  windows_utf16_convert.rs
