[package]
name = "system_recon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10.1"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
sysinfo = "0.23.12"
clap = { version = "3.1.18", features = ["derive"] }
winapi = { version = "0.3.9", features = ["iphlpapi"] }
execute = "0.2.11"
csv = "1.1.6"
quickxml_to_serde = "0.5.0"